tests/duplicate_methods/duplicate_methods.exp
Error ------------------------------------------------------------------------------------------------------ test.js:4:3

`m` has already been declared in this class. Class member names must be unique. [duplicate-class-member]

   4|   m() { }
        ^


Error ----------------------------------------------------------------------------------------------------- test.js:11:3

`m` has already been declared in this class. Class member names must be unique. [duplicate-class-member]

   11|   m() { }
         ^


Error ----------------------------------------------------------------------------------------------------- test.js:18:3

`m` has already been declared in this class. Class member names must be unique. [duplicate-class-member]

   18|   m() { }
         ^


Error ----------------------------------------------------------------------------------------------------- test.js:32:7

`m` has already been declared in this class. Class member names must be unique. [duplicate-class-member]

   32|   get m(): number { return 42; }
             ^


Error ----------------------------------------------------------------------------------------------------- test.js:33:7

`m` has already been declared in this class. Class member names must be unique. [duplicate-class-member]

   33|   set m(x: number): void { }
             ^



Found 5 errors
